--- a/client/src/components/ServicesSectionComponents/servicesSection.css
+++ b/client/src/components/ServicesSectionComponents/servicesSection.css
@@ -71,6 +71,106 @@
 
 .card-wrapper{
     background: black;
-    width: 370px;
+    width: 450px;
     height: 400px;
+    border-radius: 12px;
+    border: 0;
 }
+
+.owl-theme{
+    overflow: visible !important;
+}
+.owl-prev {
+    width: 55px;
+    height: 55px;
+    position: absolute;
+    top: 40%;
+    left: -30px;
+    margin-left: -20px;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+    background: white !important;
+    opacity: 1 !important;
+    border:0;
+    border-radius: 600px !important;
+    box-shadow: 0 15px 59px rgba(0, 0, 0, 0.2) !important;
+}
+
+.owl-next {
+    width: 55px;
+    height: 55px;
+    position: absolute;
+    top: 40%;
+    right: 100px;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+    background: white !important;
+    opacity: 1 !important;
+    border:0;
+    border-radius: 600px !important;
+    box-shadow: 0 15px 59px rgba(0, 0, 0, 0.2) !important;
+}
+.owl-prev i, .owl-next i {transform : scale(1,6); color: #ccc;}
+
+.owl-next.disabled{
+    opacity: 0.8 !important;
+}
+.owl-prev.disabled{
+    opacity: 0.8 !important;
+}
+.prev{
+    padding-right: 5px !important;
+    padding-top: 3px !important;
+}
+.next{
+    padding-left: 3px !important;
+    padding-top: 3px !important;
+}
+
+
+
+/*.owl-prev {*/
+/*    background: url("../../assets/angle-right.svg") no-repeat center center !important;*/
+
+/*    font-family: 'Font Awesome 6 Pro', sans-serif;*/
+/*    font-style: normal;*/
+/*    font-weight: 400;*/
+/*    font-size: 28px !important;*/
+/*    line-height: 28px;*/
+/*    color: #E21F4D !important;*/
+/*    width: 55px;*/
+/*    height: 55px;*/
+/*    border-radius: 50% !important;*/
+/*    position: absolute;*/
+/*    top: 40%;*/
+/*    margin-left: -20px;*/
+/*    display: block !important;*/
+/*    border:1px solid white !important;*/
+/*}*/
+
+/*.owl-next {*/
+/*    background: url("../../assets/angle-right.svg") no-repeat center center !important;*/
+/*    font-family: 'Font Awesome 6 Pro', sans-serif;*/
+/*    font-style: normal;*/
+/*    font-weight: 400;*/
+/*    font-size: 28px !important;*/
+/*    line-height: 28px;*/
+/*    color: #E21F4D !important;*/
+/*    width: 55px;*/
+/*    height: 55px;*/
+/*    border-radius: 50% !important;*/
+/*    position: absolute;*/
+/*    top: 40%;*/
+/*    right: 150px;*/
+/*    display: block !important;*/
+/*    border:1px solid white !important;*/
+/*    padding-right: 10px !important;*/
+/*    transform: matrix(-1, 0, 0, 1, 0, 0);*/
+/*}*/
+.owl-prev i, .owl-next i {transform : scale(1,6); color: #ccc;}
