--- a/client/src/components/ServicesSectionComponents/servicesSection.css
+++ b/client/src/components/ServicesSectionComponents/servicesSection.css
@@ -4,7 +4,8 @@
     align-content: start;
     align-items: center;
     flex-wrap: wrap;
-    height: 5000px;
+    width: 100%;
+    height: 730px;
     z-index: 6;
     overflow: hidden;
 }
@@ -34,6 +35,8 @@
     line-height: 19px;
     color: #E21F4D;
 }
+
+
 
 .top-text {
     width: 80%;
@@ -69,13 +72,7 @@
     margin-block: 30px;
 }
 
-.card-wrapper{
-    background: black;
-    width: 450px;
-    height: 400px;
-    border-radius: 12px;
-    border: 0;
-}
+
 
 .owl-theme{
     overflow: visible !important;
@@ -85,7 +82,7 @@
     height: 55px;
     position: absolute;
     top: 40%;
-    left: -30px;
+    left: -20px;
     margin-left: -20px;
     display: flex !important;
     justify-content: center;
@@ -104,7 +101,7 @@
     height: 55px;
     position: absolute;
     top: 40%;
-    right: 20px;
+    right: 90px;
     display: flex !important;
     justify-content: center;
     align-items: center;
@@ -133,44 +130,110 @@
     padding-top: 3px !important;
 }
 
+.card{
+    display: flex;
+    align-content: end;
+    flex-wrap: wrap;
+    width: 370px !important;
+    height: 400px;
+    background: #FFFFFF;
+    box-shadow: 0 14px 25px rgba(0, 0, 0, 0.1);
+    border-radius: 10px 10px 0 0;
+    margin-top: 10px;
+}
 
+.owl-stage-outer{
+    height: 450px !important;
+    width: 95% !important;
+    padding: 15px !important;
+}
 
-/*.owl-prev {*/
-/*    background: url("../../assets/angle-right.svg") no-repeat center center !important;*/
+.card-treatment{
+    background: url("../../assets/treatment.png") no-repeat;
+}
+.card-extraction{
+    background: url("../../assets/extraction.png")  no-repeat;
+}
+.card-hygiene{
+    background: url("../../assets/hygiene.png")  no-repeat;
+}
 
-/*    font-family: 'Font Awesome 6 Pro', sans-serif;*/
-/*    font-style: normal;*/
-/*    font-weight: 400;*/
-/*    font-size: 28px !important;*/
-/*    line-height: 28px;*/
-/*    color: #E21F4D !important;*/
-/*    width: 55px;*/
-/*    height: 55px;*/
-/*    border-radius: 50% !important;*/
-/*    position: absolute;*/
-/*    top: 40%;*/
-/*    margin-left: -20px;*/
-/*    display: block !important;*/
-/*    border:1px solid white !important;*/
-/*}*/
+.card-implant{
+    background: url("../../assets/implantation.png")  no-repeat;
+}
 
-/*.owl-next {*/
-/*    background: url("../../assets/angle-right.svg") no-repeat center center !important;*/
-/*    font-family: 'Font Awesome 6 Pro', sans-serif;*/
-/*    font-style: normal;*/
-/*    font-weight: 400;*/
-/*    font-size: 28px !important;*/
-/*    line-height: 28px;*/
-/*    color: #E21F4D !important;*/
-/*    width: 55px;*/
-/*    height: 55px;*/
-/*    border-radius: 50% !important;*/
-/*    position: absolute;*/
-/*    top: 40%;*/
-/*    right: 150px;*/
-/*    display: block !important;*/
-/*    border:1px solid white !important;*/
-/*    padding-right: 10px !important;*/
-/*    transform: matrix(-1, 0, 0, 1, 0, 0);*/
-/*}*/
-.owl-prev i, .owl-next i {transform : scale(1,6); color: #ccc;}
+.treatment-text-wrapper{
+    position: relative;
+    bottom: 0;
+    width: 370px;
+    height: 200px;
+    border-radius: 10px 10px 0 0;
+}
+
+.card-text-wrapper{
+    display: flex;
+    height: 50%;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    .name{
+        width: 85%;
+        height: 25px;
+        font-family: 'Manrope', sans-serif;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 25px;
+        color: #3F3F3F;
+        margin-bottom: 5%;
+    }
+    .description{
+        width: 85%;
+        height: 36px;
+        font-family: 'Manrope', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 18px;
+        color: #3F3F3F;
+        margin-bottom: 5%;
+    }
+    .option{
+        display: flex;
+        width: 85%;
+        height: 40px;
+        button{
+            width: 146px;
+            height: 40px;
+            background: #E21F4D;
+            box-shadow: inset 0 0 27px 4px rgba(255, 255, 255, 0.46);
+            border-radius: 1000px;
+            font-family: 'Manrope', sans-serif;
+            font-style: normal;
+            font-size: 14px;
+            line-height: 19px;
+            color: #FFFFFF;
+            border: 0;
+        }
+        button:hover{
+            background-color: #E21F4D99;
+        }
+        a{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-decoration: none;
+            width: 125px;
+            height: 40px;
+            font-family: 'Manrope', sans-serif;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 13px;
+            line-height: 18px;
+            color: #3F3F3F;
+            margin-left: 5%;
+        }
+    }
+}
