--- a/client/src/components/AboutUsComponents/aboutUs.css
+++ b/client/src/components/AboutUsComponents/aboutUs.css
@@ -1,5 +1,5 @@
-.about-us-wrapper{
-    background: url("../../assets/image 1327.png") 40% 0 no-repeat;
+.about-us-wrapper {
+    background: url("../../assets/Group 517.png") 50% 5% no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,46 +8,60 @@
     width: 100%;
 }
 
-.about-us-container{
-    height: 400px;
+.about-us-container {
+    height: 500px;
     display: flex;
-    justify-content: space-between;
-    width: 65%;
-    .head-doctor{
-        width: 206px;
-        height: 116px;
-        font-family: 'Manrope', sans-serif;
-        font-style: normal;
-        font-weight: 600;
-        font-size: 55px;
-        line-height: 105%;
-        color: #E21F4D;
-        svg{
-            margin-left: -5px;
-            margin-bottom: 40px;
+    justify-content: space-around;
+    width: 80%;
+
+    .head-doctor {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        right: 7%;
+
+        svg {
+            margin-left: -9px;
+            margin-bottom: -6px;
         }
-        p{
+
+        .head-doctor-name {
+            display: flex;
+            flex-direction: column;
             margin-left: 5px;
             font-family: 'Manrope', sans-serif;
             font-style: normal;
-            font-weight: 400;
+            font-weight: 600;
             font-size: 55px;
             line-height: 105%;
-            color: #3F3F3F;
+            color: #E21F4D;
+
+            p {
+                margin-bottom: 10%;
+                font-family: 'Manrope', sans-serif;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 105%;
+                color: #3F3F3F;
+            }
         }
-        span{
+
+        .head-doctor-position {
             width: 117px;
             height: 25px;
             font-family: 'Manrope', sans-serif;
             font-style: normal;
             font-weight: 500;
             font-size: 18px;
+            line-height: 25px;
             color: #3F3F3F;
             margin-left: 5px;
+            margin-bottom: 15%;
         }
-        button{
+
+        button {
             border-radius: 1000px;
-            width: 250px;
+            width: 255px;
             height: 70px;
             font-family: 'Manrope', sans-serif;
             font-style: normal;
@@ -57,15 +71,106 @@
             color: #FFFFFF;
             border: 0;
             background-color: #E21F4D;
-            box-shadow: inset 0 0 27px 4px rgba(255, 255, 255, 0.46), 0 6px 10px rgba(226, 31, 77, 0.6) ;
+            box-shadow: inset 0 0 27px 4px rgba(255, 255, 255, 0.46), 0 6px 10px rgba(226, 31, 77, 0.6);
         }
-        button:hover{
+
+        button:hover {
             background-color: #E21F4D99;
         }
     }
 }
 
-.our-experts-table{
+.about-us-info {
+    display: flex;
+    width: 40%;
+    flex-direction: column;
+    justify-content: start;
+    align-content: start;
+    align-items: start;
+    flex-wrap: wrap;
+}
+
+.about-us-label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 143px;
+    height: 44px;
+    background: #FFFFFF;
+    box-shadow: 0 15px 59px rgba(0, 0, 0, 0.08);
+    border-radius: 351px;
+    font-family: 'Manrope', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 19px;
+    color: #E21F4D;
+    margin-bottom: 5%;
+}
+
+.about-us-text-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.about-us-text-container {
+    display: flex;
+    flex-direction: column;
+    svg {
+        position: relative;
+        right: 15px;
+        bottom: -10px;
+    }
+
+    span {
+        font-family: 'Manrope', sans-serif;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 30px;
+        line-height: 40px;
+        text-transform: uppercase;
+        color: #E21F4D;
+
+        p {
+
+            font-family: 'Manrope', sans-serif;
+            font-style: normal;
+            font-weight: 800;
+            font-size: 30px;
+            line-height: 40px;
+            text-transform: uppercase;
+            color: #3F3F3F;
+        }
+    }
+}
+
+.about-us-text{
+    margin-left: 20%;
+    width: 460px;
+    margin-top: 20px;
+    span{
+        width: 458px;
+        height: 214px;
+        font-family: 'Manrope', sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 150%;
+        color: #3F3F3F;
+    }
+    p{
+        margin-top: 20px;
+        font-family: 'Manrope', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        color: #3F3F3F;
+    }
+}
+
+.our-experts-table {
     width: 1500px;
     height: 998px;
     background: #F5F5F5;
