--- a/client/src/components/AboutUsComponents/aboutUs.css
+++ b/client/src/components/AboutUsComponents/aboutUs.css
@@ -18,8 +18,6 @@
         display: flex;
         flex-direction: column;
         position: relative;
-        right: 7%;
-
         svg {
             margin-left: -9px;
             margin-bottom: -6px;
@@ -171,9 +169,175 @@
 }
 
 .our-experts-table {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 1500px;
     height: 998px;
     background: #F5F5F5;
     border-radius: 50px;
+    button{
+        margin-block: 3%;
+        width: 195px;
+        height: 54px;
+        border: 0;
+        background: #E21F4D;
+        box-shadow: inset 5px 0 15px 25px rgba(255, 255, 255, 0.25);
+        border-radius: 1000px;
+        font-family: 'Manrope', sans-serif;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 22px;
+        text-align: center;
+        color: #FFFFFF;
+    }
+}
 
+.experts-table-title{
+    width: 100%;
+    padding-block: 3%;
+    display: flex;
+    justify-content: space-around;
+}
+.experts-table-title-pin{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 177px;
+    height: 46px;
+    background: #FFFFFF;
+    box-shadow: 0 15px 59px rgba(0, 0, 0, 0.08);
+    border-radius: 351px;
+    font-family: 'Manrope', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 19px;
+    color: #E21F4D;
+}
+
+.experts-table-title-text{
+    width: 327px;
+    height: 80px;
+    font-family: 'Manrope', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 40px;
+    text-transform: uppercase;
+    color: #3F3F3F;
+    margin-top: 15px;
+    span{
+        font-family: 'Manrope', sans-serif;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 30px;
+        line-height: 40px;
+        text-transform: uppercase;
+        color: #E21F4D;
+    }
+}
+
+.experts-table-title-right{
+    svg{
+        position: relative;
+        right: 4%;
+    }
+    width: 428px;
+    height: 101px;
+    font-family: 'Manrope', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 150%;
+    color: #3F3F3F;
+}
+
+.experts-cards-container{
+    display: flex;
+    justify-content: space-evenly;
+    width: 80%;
+    padding-inline: 10%;
+    margin: 0;
+}
+
+.experts-card-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    width: 384px;
+    height: 606px;
+    background: #FFFFFF;
+    border-radius: 10px;
+    .name{
+        width: 260px;
+        height: 25px;
+        font-family: 'Manrope', sans-serif;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 25px;
+        color: #3F3F3F;
+        margin-block: 5%;
+    }
+    .type{
+        width: 260px;
+        height: 19px;
+        font-family: 'Manrope', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 19px;
+        color: #E21F4D;
+        margin-bottom: 3%;
+    }
+    .description{
+        width: 260px;
+        height: 54px;
+        font-family: 'Manrope', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 19px;
+        color: #3F3F3F;
+        opacity: 0.6;
+        margin-bottom: 5%;
+    }
+    .btn-wrapper{
+        display: flex;
+        width: 260px;
+
+    }
+    button{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-sizing: border-box;
+        width: 161px;
+        height: 55px;
+        border: 1px solid #E21F4D;
+        box-shadow: 0 5px 7px 4px rgba(17, 39, 88, 0.2);
+        border-radius: 1000px;
+        font-family: 'Manrope', sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 19px;
+        text-align: center;
+        color: #E21F4D;
+        background-color: white;
+        img{
+            position: relative;
+            left: 3%;
+        }
+    }
+    button:hover{
+        background-color: #F5F5F5;
+    }
 }
