--- a/client/src/components/AboutUsComponents/aboutUs.css
+++ b/client/src/components/AboutUsComponents/aboutUs.css
@@ -4,12 +4,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 1570px;
+    height: auto;
     width: 100%;
 }
 
 .about-us-container {
-    height: 500px;
+    height: 530px;
     display: flex;
     justify-content: space-around;
     width: 80%;
