--- a/client/src/components/TenetsCompontents/tenets.css
+++ b/client/src/components/TenetsCompontents/tenets.css
@@ -1,12 +1,9 @@
 .tenets-container{
-    background: url("../../assets/tenetsBg.png") 10% -20% no-repeat;
+    background: url("../../assets/tenetsBg.png") 0 40% no-repeat;
     width: 100%;
-    height: 923px;
+    height: 788px;
     display: flex;
     justify-content: space-evenly;
-    h4{
-
-    }
 }
 
 .tenets-pin{
@@ -24,6 +21,7 @@
     font-size: 14px;
     line-height: 19px;
     color: #E21F4D;
+    margin-top: 35px;
     margin-bottom: -15px;
 }
 
@@ -54,4 +52,62 @@
         left: 85%;
         margin-bottom: 15px;
     }
+}
+
+.dignities-container{
+    display: flex;
+    height: 570px;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-block: 40px;
+    position: relative;
+    left: 18%;
+    button {
+        margin-top: 15px;
+        width: 292px;
+        height: 80px;
+        border: 0;
+        background: #E21F4D;
+        box-shadow: inset 0 0 27px 4px rgba(255, 255, 255, 0.46), 0 6px 10px rgba(226, 31, 77, 0.6);
+        border-radius: 1000px;
+        font-family: 'Manrope', sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 25px;
+        color: #FFFFFF;
+    }
+    svg{
+        position: relative;
+        left: 50%;
+    }
+}
+
+.dignity-img-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 80px;
+    img{
+        width: 60px;
+        height: 60px;
+    }
+}
+
+.dignity-wrapper{
+    display: flex;
+    align-items: center;
+    align-content: center;
+    width: 400px;
+    height: 80px;
+    background: #FFFFFF;
+    box-shadow: 0 15px 59px rgba(0, 0, 0, 0.08);
+    border-radius: 11px;
+    font-family: 'Manrope', sans-serif;
+    font-style: normal;
+    font-size: 11px;
+    line-height: 15px;
+    color: #3F3F3F;
+
 }
