рефактор приветственной страницы

--- a/client/src/components/AboutUsComponents/aboutUs.css
+++ b/client/src/components/AboutUsComponents/aboutUs.css
@@ -173,7 +173,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 1500px;
+    width: 85%;
     height: 998px;
     background: #F5F5F5;
     border-radius: 50px;
