фикс приветственной страницы

--- a/client/src/components/WelcomingSectionComponents/welcoming.css
+++ b/client/src/components/WelcomingSectionComponents/welcoming.css
@@ -1,16 +1,18 @@
+.welcoming-wrapper {
+    background: url("../../assets/123.png") no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 960px;
+}
+
 .welcoming-container {
     display: flex;
     justify-content: center;
     align-items: center;
     background: url("../../assets/welcomingBg.png") no-repeat;
+    background-position-y: 15px;
     width: 100%;
     height: 100%;
-}
-
-.welcoming-wrapper {
-    background: url("../../assets/123.png") 0 0 / 100% no-repeat;
-    width: 100%;
-    height: 844px;
 }
 
 .welcoming-content {
